--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <!-- 6/8없데이트 header에 .main추가 -->
-<header class="main main-top">
+<!--<header class="main main-top">
     <div class="head">
         <h1><a href="/"><img src="/images/logo_w.png" alt="AK 홀딩스 로고"><img src="/images/logo_b.png" alt="AK 홀딩스 로고"></a></h1>
         <div class="quick-menu">
@@ -49,7 +49,7 @@
                 <ul>
                     <li>
                         <ul>
-                            <!-- 메뉴 활성화시 아래 li에 .active 추가 -->
+                            &lt;!&ndash; 메뉴 활성화시 아래 li에 .active 추가 &ndash;&gt;
                             <li><a href="/value_founded.html">애경 가치</a></li>
                             <li><a href="/value_founded.html">창업이념</a></li>
                             <li><a href="/value_management">경영이념</a></li>
@@ -161,7 +161,7 @@
             </li>
         </ul>
     </nav>
-</header>
+</header>-->
 <main class="main">
     <div id="fullpage" class="fullpage-wrapper">
         <section class="section fp-section top-visual" data-anchor="topVisual" id="section0">
@@ -200,7 +200,17 @@
                         <div class="swiper-slide">
                             <h3>
                                 <a href="#">
-                                    <img src="./images/@news_thumb.png" alt="">
+                                    <img src="./images/temp_thumb.png" alt="">
+                                    <p class="tit">제주항공</p>
+                                    <p class="con">환경부와 지속가능의 환경교육 '맞손'</p>
+                                    <p class="date">2022.06.08</p>
+                                </a>
+                            </h3>
+                        </div>
+                        <div class="swiper-slide">
+                            <h3>
+                                <a href="#">
+                                    <img src="./images/temp_thumb.png" alt="">
                                     <p class="tit">제주항공</p>
                                     <p class="con">AK&홍대, 글로벌 캐릭터 활용한 ‘시나모롤<br>
                                         스위트카페’ 국내 최초 오픈</p>
@@ -211,7 +221,7 @@
                         <div class="swiper-slide">
                             <h3>
                                 <a href="#">
-                                    <img src="./images/@news_thumb.png" alt="">
+                                    <img src="./images/temp_thumb.png" alt="">
                                     <p class="tit">제주항공</p>
                                     <p class="con">AK&홍대, 글로벌 캐릭터 활용한 ‘시나모롤<br>
                                         스위트카페’ 국내 최초 오픈</p>
@@ -222,7 +232,7 @@
                         <div class="swiper-slide">
                             <h3>
                                 <a href="#">
-                                    <img src="./images/@news_thumb.png" alt="">
+                                    <img src="./images/temp_thumb.png" alt="">
                                     <p class="tit">제주항공</p>
                                     <p class="con">AK&홍대, 글로벌 캐릭터 활용한 ‘시나모롤<br>
                                         스위트카페’ 국내 최초 오픈</p>
@@ -233,7 +243,7 @@
                         <div class="swiper-slide">
                             <h3>
                                 <a href="#">
-                                    <img src="./images/@news_thumb.png" alt="">
+                                    <img src="./images/temp_thumb.png" alt="">
                                     <p class="tit">제주항공</p>
                                     <p class="con">AK&홍대, 글로벌 캐릭터 활용한 ‘시나모롤<br>
                                         스위트카페’ 국내 최초 오픈</p>
@@ -244,7 +254,7 @@
                         <div class="swiper-slide">
                             <h3>
                                 <a href="#">
-                                    <img src="./images/@news_thumb.png" alt="">
+                                    <img src="./images/temp_thumb.png" alt="">
                                     <p class="tit">제주항공</p>
                                     <p class="con">AK&홍대, 글로벌 캐릭터 활용한 ‘시나모롤<br>
                                         스위트카페’ 국내 최초 오픈</p>
@@ -255,7 +265,7 @@
                         <div class="swiper-slide">
                             <h3>
                                 <a href="#">
-                                    <img src="./images/@news_thumb.png" alt="">
+                                    <img src="./images/temp_thumb.png" alt="">
                                     <p class="tit">제주항공</p>
                                     <p class="con">AK&홍대, 글로벌 캐릭터 활용한 ‘시나모롤<br>
                                         스위트카페’ 국내 최초 오픈</p>
@@ -266,7 +276,7 @@
                         <div class="swiper-slide">
                             <h3>
                                 <a href="#">
-                                    <img src="./images/@news_thumb.png" alt="">
+                                    <img src="./images/temp_thumb.png" alt="">
                                     <p class="tit">제주항공</p>
                                     <p class="con">AK&홍대, 글로벌 캐릭터 활용한 ‘시나모롤<br>
                                         스위트카페’ 국내 최초 오픈</p>
@@ -277,7 +287,7 @@
                         <div class="swiper-slide">
                             <h3>
                                 <a href="#">
-                                    <img src="./images/@news_thumb.png" alt="">
+                                    <img src="./images/temp_thumb.png" alt="">
                                     <p class="tit">제주항공</p>
                                     <p class="con">AK&홍대, 글로벌 캐릭터 활용한 ‘시나모롤<br>
                                         스위트카페’ 국내 최초 오픈</p>
@@ -288,7 +298,7 @@
                         <div class="swiper-slide">
                             <h3>
                                 <a href="#">
-                                    <img src="./images/@news_thumb.png" alt="">
+                                    <img src="./images/temp_thumb.png" alt="">
                                     <p class="tit">제주항공</p>
                                     <p class="con">AK&홍대, 글로벌 캐릭터 활용한 ‘시나모롤<br>
                                         스위트카페’ 국내 최초 오픈</p>
@@ -299,7 +309,7 @@
                         <div class="swiper-slide">
                             <h3>
                                 <a href="#">
-                                    <img src="./images/@news_thumb.png" alt="">
+                                    <img src="./images/temp_thumb.png" alt="">
                                     <p class="tit">제주항공</p>
                                     <p class="con">AK&홍대, 글로벌 캐릭터 활용한 ‘시나모롤<br>
                                         스위트카페’ 국내 최초 오픈</p>
@@ -310,7 +320,7 @@
                         <div class="swiper-slide">
                             <h3>
                                 <a href="#">
-                                    <img src="./images/@news_thumb.png" alt="">
+                                    <img src="./images/temp_thumb.png" alt="">
                                     <p class="tit">제주항공</p>
                                     <p class="con">AK&홍대, 글로벌 캐릭터 활용한 ‘시나모롤<br>
                                         스위트카페’ 국내 최초 오픈</p>
@@ -321,7 +331,7 @@
                         <div class="swiper-slide">
                             <h3>
                                 <a href="#">
-                                    <img src="./images/@news_thumb.png" alt="">
+                                    <img src="./images/temp_thumb.png" alt="">
                                     <p class="tit">제주항공</p>
                                     <p class="con">AK&홍대, 글로벌 캐릭터 활용한 ‘시나모롤<br>
                                         스위트카페’ 국내 최초 오픈</p>
@@ -332,7 +342,7 @@
                         <div class="swiper-slide">
                             <h3>
                                 <a href="#">
-                                    <img src="./images/@news_thumb.png" alt="">
+                                    <img src="./images/temp_thumb.png" alt="">
                                     <p class="tit">제주항공</p>
                                     <p class="con">AK&홍대, 글로벌 캐릭터 활용한 ‘시나모롤<br>
                                         스위트카페’ 국내 최초 오픈</p>
@@ -343,18 +353,7 @@
                         <div class="swiper-slide">
                             <h3>
                                 <a href="#">
-                                    <img src="./images/@news_thumb.png" alt="">
-                                    <p class="tit">제주항공</p>
-                                    <p class="con">AK&홍대, 글로벌 캐릭터 활용한 ‘시나모롤<br>
-                                        스위트카페’ 국내 최초 오픈</p>
-                                    <p class="date">2022.06.08</p>
-                                </a>
-                            </h3>
-                        </div>
-                        <div class="swiper-slide">
-                            <h3>
-                                <a href="#">
-                                    <img src="./images/@news_thumb.png" alt="">
+                                    <img src="./images/temp_thumb.png" alt="">
                                     <p class="tit">제주항공</p>
                                     <p class="con">AK&홍대, 글로벌 캐릭터 활용한 ‘시나모롤<br>
                                         스위트카페’ 국내 최초 오픈</p>
@@ -377,27 +376,38 @@
         </section>
         <section class="section fp-section esg" data-anchor="esg" id="section2">
             <div class="left-box">
-                <div class="caption tk-arboria">
-                    <h2>ESG</h2>
-                    <p>Love & Respect
+                <div class="caption">
+                    <h2 class="tk-arboria">ESG</h2>
+                    <p class="tk-arboria">Love & Respect<br>
                         <strong>for Earth</strong>
                     </p>
                 </div>
-
             </div>
             <div class="right-box">
                 <div class="news">
                     <h3>ESG 소식</h3>
-                    <div>지속 가능한 경영을 위한
-                        애경그룹의 노력을 소개합니다.</div>
-                    <a href="#">ESG 소식 바로가기</a>
+                    <p>지속 가능한 경영을 위한<br>
+                        애경그룹의 노력을 소개합니다.</p>
+                    <a href="#" class="btn_link">ESG 소식 바로가기</a>
                 </div>
                 <div class="activity">
                     <h3>주요 ESG 활동</h3>
-                    사랑과 존경의 정신을 바탕으로
-                    공생의 가치를 실현하고 있습니다
-                    <a href="#">주요 ESG 활동 바로가기</a>
+                    <p>사랑과 존경의 정신을 바탕으로<br>
+                        공생의 가치를 실현하고 있습니다</p>
+                    <a href="#" class="btn_link">주요 ESG 활동 바로가기</a>
                 </div>
+            </div>
+            <div class="cont-box">
+                <a href="javascript:;" class="news">
+                    <h3>ESG 소식</h3>
+                    <p>지속 가능한 경영을 위한<br>
+                        애경그룹의 노력을 소개합니다.</p>
+                </a>
+                <a href="javascript:;" class="activity">
+                    <h3>주요 ESG 활동</h3>
+                    <p>사랑과 존경의 정신을 바탕으로<br>
+                        공생의 가치를 실현하고 있습니다</p>
+                </a>
             </div>
         </section>
         <footer class="section fp-auto-height" data-anchor="footer"id="section3">
