--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <!-- 6/8없데이트 header에 .main추가 -->
-<!--<header class="main main-top">
+<header class="main main-top">
     <div class="head">
         <h1><a href="/"><img src="/images/logo_w.png" alt="AK 홀딩스 로고"><img src="/images/logo_b.png" alt="AK 홀딩스 로고"></a></h1>
         <div class="quick-menu">
@@ -49,7 +49,7 @@
                 <ul>
                     <li>
                         <ul>
-                            &lt;!&ndash; 메뉴 활성화시 아래 li에 .active 추가 &ndash;&gt;
+                            <!-- 메뉴 활성화시 아래 li에 .active 추가 -->
                             <li><a href="/value_founded.html">애경 가치</a></li>
                             <li><a href="/value_founded.html">창업이념</a></li>
                             <li><a href="/value_management">경영이념</a></li>
@@ -161,7 +161,7 @@
             </li>
         </ul>
     </nav>
-</header>-->
+</header>
 <main class="main">
     <div id="fullpage" class="fullpage-wrapper">
         <section class="section fp-section top-visual" data-anchor="topVisual" id="section0">
