--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 </header>
 <main class="main">
     <div id="fullpage" class="fullpage-wrapper">
-        <section class="section fp-section top-visual" data-anchor="topVisual" id="section0">
+        <section class="section fp-auto-height-responsive top-visual" data-anchor="topVisual" id="section0">
             <div class="video-box">
                 <video playsinline muted autoplay loop poster="/videos/Mo_AK_Main.mp4" class="mo">
                     <source src="/videos/Mo_AK_Main.mp4" type="video/mp4">
@@ -189,7 +189,7 @@
             <div class="btn-scroll-down"><a href="javascript:;" onclick="myFullpage.moveTo('newsRoom', 1)" class="tk-arboria" onClick="scrollDown()"><img src="./images/scrollMotion.gif" alt="클릭시 다음페이지로 이동">SCROLL</a></div>
 
         </section>
-        <section class="section fp-section news-room" data-anchor="newsRoom" id="section1">
+        <section class="section fp-auto-height-responsive news-room" data-anchor="newsRoom" id="section1">
             <div class="news-top">
                 <h2 class="tk-arboria">NEWSROOM</h2>
                 <p>지속 가능한 경영을 통해<br class="mo"> 풍요롭고 행복한 내일을 만들겠습니다</p>
@@ -374,7 +374,7 @@
                 </div>
             </div>
         </section>
-        <section class="section fp-section esg" data-anchor="esg" id="section2">
+        <section class="section fp-auto-height-responsive esg" data-anchor="esg" id="section2">
             <div class="left-box">
                 <div class="caption">
                     <h2 class="tk-arboria">ESG</h2>
@@ -437,6 +437,7 @@
             licenseKey: 'FC634C81-CDA24EDD-9C3418A5-8FA08AC3',
             verticalCentered: true,
             anchors: ['topVisual', 'newsRoom', 'esg', 'footer'],
+            responsiveWidth: 900,
             afterLoad: function(origin, destination, direction, trigger){
                 let params = {
                     origin: origin,
@@ -449,10 +450,10 @@
                 else $('header').removeClass('main-top');
             }
         });
-
+        // const spaceBetween = window.innerWidth > 960 ? 36 : 20
         const swiper = new Swiper('.swiper', {
             slidesPerView: 'auto',
-            spaceBetween: 36,
+            spaceBetween: 20,
             // width: 376,
             // pagination: {
             //     el: ".swiper-pagination",
@@ -464,9 +465,14 @@
                 nextEl: '.swiper-button-next',
                 prevEl: '.swiper-button-prev',
             },
+            breakpoints: {
+                960: {
+                    spaceBetween: 36,
+                },
+            },
             on: {
                 slideChange: function () {
-
+                    console.log(swiper.activeIndex , $('.swiper-slide').length);
                     console.log(swiper.activeIndex * 100 / $('.swiper-slide').length);
                     $('#swiperBar').css('width', swiper.activeIndex * 100 / ($('.swiper-slide').length - Math.floor(window.innerWidth / 376)) + '%');
                 }
