--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     <div id="fullpage" class="fullpage-wrapper">
         <section class="section fp-auto-height-responsive top-visual" data-anchor="topVisual" id="section0">
             <div class="video-box">
-                <video playsinline muted autoplay loop poster="/videos/Mo_AK_Main.mp4" class="mo">
+                <video playsinline muted autoplay loop poster="/videos/Mo_AK_Main_000.jpg" class="mo">
                     <source src="/videos/Mo_AK_Main.mp4" type="video/mp4">
                     <strong>Your browser does not support the video tag.</strong>
                 </video>
