--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                     <h3>ESG 소식</h3>
                     <p>지속 가능한 경영을 위한<br>
                         애경그룹의 노력을 소개합니다.</p>
-                    <a href="#" class="btn_link">ESG 소식 바로가기</a>
+                    <a href="/fo/esgNews.do" class="btn_link">ESG 소식 바로가기</a>
                 </div>
                 <div class="activity">
                     <h3>주요 ESG 활동</h3>
