--- a/value_founded.html
+++ b/value_founded.html
@@ -170,8 +170,8 @@
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
-                <li class="mo"><a href="#">창업이념</a></li>
-                <li class="active"><a href="#">창업이념</a></li>
+                <li class="mo"><a href="#">핵심가치</a></li>
+                <li class="active"><a href="#">핵심가치</a></li>
                 <li><a href="/value_management.html">경영이념</a></li>
                 <li><a href="/value_talent.html">인재상</a></li>
                 <li class="tow-nd"><a href="#">가치체계도</a></li>
@@ -183,7 +183,7 @@
 <!--//visual 영역-->
 <!--본문영역-->
 <div class="content">
-    <div class="cont">
+    <!--<div class="cont">
         <div class="founded-story">
             <div class="desc">
                 <em class="caption">애경 그룹의 창업이념인<br class="mo"> “애경(愛敬)”은<br class="pc"> 우리 민족의<br class="mo"> 애인경천(愛人敬天) 사상에 기초하여</em>
@@ -194,29 +194,37 @@
                 <img src="/images/img_cally_ak.png" alt="愛敬(애경)">
             </div>
         </div>
-    </div>
+    </div>-->
     <div class="core-value">
-        <div class="visual">
-            <strong class="tit">핵심가치</strong>
-        </div>
+        <strong class="tit">핵심가치</strong>
         <ul class="core-value-list">
             <li class="clean">
                 <em class="tit">깨끗함</em>
-                <p class="desc">애경 그룹은 정직하고 투명한<br> 경영 활동을 통해 고객의 생활을<br> 더욱 깨끗하고 아름답게<br>만들기 위해 노력합니다.</p>
+                <p class="desc">애경 그룹은 정직하고 투명한 경영 활동을 통해<br class="mo">
+                    고객의 생활을 더욱 깨끗하고 아름답게<br class="mo">
+                    만들기 위해 노력합니다.</p>
             </li>
             <li class="trust">
-                <em class="tit">신뢰</em><!-- 6/6업데이트 오타수정 -->
-                <p class="desc">애경 그룹은 구성원 및 파트너들과<br> 끊임 없는 소통으로 신뢰를 형성하여<br> 누구나 믿을 수 있는<br> 제품과 서비스를 제공합니다.</p>
+                <em class="tit">신뢰</em>
+                <p class="desc">애경 그룹은 구성원 및 파트너들과 끊임 없는<br class="mo">
+                    소통으로 신뢰를 형성하여 누구나 믿을 수 있는<br class="mo">
+                    제품과 서비스를 제공 합니다.</p>
             </li>
             <li class="innovation">
                 <em class="tit">혁신</em>
-                <p class="desc">애경 그룹은 고객이 원하는 가치가<br> 무엇인지 고민하며 고객의 삶에<br> 더 가까이 가기 위한 길을 찾기 위해<br> 항상 혁신하고 있습니다.</p>
+                <p class="desc">애경 그룹은 고객이 원하는 가치가 무엇인지<br class="mo">
+                    고민하며 고객의 삶에 더 가까이 가기 위한<br class="mo">
+                    길을 찾기 위해 항상 혁신하고 있습니다.</p>
             </li>
             <li class="challenge">
                 <em class="tit">도전</em>
-                <p class="desc">애경 그룹은 창의적인 생각과<br> 실패를 두려워하지 않는<br> 용기를 바탕으로 끊임없이 고객에게<br> 다가가기 위해 도전합니다.</p>
+                <p class="desc">애경 그룹은 창의적인 생각과 실패를<br class="mo">
+                    두려워하지 않는 용기를 바탕으로 끊임없이<br class="mo">
+                    고객에게 다가가기 위해 도전합니다.</p>
             </li>
         </ul>
+
+        <div class="visual"></div>
     </div>
 </div>
 <!--//본문영역-->
