--- a/value_talent.html
+++ b/value_talent.html
@@ -171,7 +171,7 @@
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
                 <li class="mo"><a href="javascript:;">인재상</a></li>
-                <li><a href="/value_founded.html">창업이념</a></li>
+                <li><a href="/value_founded.html">핵심가치</a></li>
                 <li><a href="/value_management.html">경영이념</a></li>
                 <li class="active"><a href="javascript:;">인재상</a></li>
                 <li class="tow-nd"><a href="javascript:;">가치체계도</a></li>
