--- a/introduce_ceo.html
+++ b/introduce_ceo.html
@@ -172,6 +172,7 @@
                 <!-- active: 활성화시 li에 .active 추가 -->
                 <li class="mo"><a href="javascript:;">CEO Message</a></li>
                 <li class="active"><a href="javascript:;">CEO Message</a></li>
+                <li><a href="/introduce_ci.html">CI</a></li>
                 <li class="tow-nd"><a href="javascript:;">홀딩스 역할</a></li>
                 <li class="tow-nd"><a href="javascript:;">거버넌스 구조</a></li>
             </ul>
