--- a/introduce_ci.html
+++ b/introduce_ci.html
@@ -163,16 +163,16 @@
 <!--visual 영역-->
 <div class="topArea sub">
     <div class="titArea">
-        <h2 class="tit"><span class="tk-arboria">Corporate Identity</span></h2>
-        <p class="desc">변화를 주도하는 애경그룹의 진취적이고<br class="mo">미래지향적인 의지를 상징합니다</p>
+        <h2 class="tit"><span class="tk-arboria">회사 소개</span></h2>
+        <p class="desc">사랑과 존경의 정신으로<br class="mo"> 100년 애경을 만들어갑니다</p>
     </div>
-    <div class="visual intro has-tab"><!-- 6/7업데이트 - 비주얼이미지 인라인 제거 및 class 추가-->
+    <div class="visual intro-company has-tab"><!-- 6/7업데이트 - 비주얼이미지 인라인 제거 및 class 추가-->
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
-                <li class="mo"><a href="javascript:;">의미</a></li>
-                <li class="active"><a href="javascript:;">의미</a></li>
-                <li class="tow-nd"><a href="javascript:;">로고 규정</a></li>
+                <li class="mo"><a href="javascript:;">CI</a></li>
+                <li><a href="/introduce_ceo.html">CEO Message</a></li>
+                <li class="active"><a href="javascript:;">CI</a></li>
             </ul>
         </div>
     </div>
@@ -182,35 +182,40 @@
 <div class="content">
     <div class="cont">
         <div class="intro-ci">
-            <div class="tit-wrap">
-                <em class="cont_tit">심벌마크의 의미</em>
-                <p class="desc">
-                    AK의 심벌마크의 영문 ‘A’와 ‘K’는<br class="mo">
-                    세계 속으로 무한히 도약하는 애경을,<br>
-                    하단 부분의 곡선은<br class="mo">
-                    ‘역동적으로 파도치는 맑고 큰 물결’로<br>
-                    21세기 변화를 주도하는 진취적, 미래지향적<br class="mo">
-                    애경의 의지 표명하였습니다.
-                </p>
-            </div>
+            <em class="cont_tit">심벌마크 소개</em>
             <div class="ci-wrap">
                 <span class="symbol">
                     <img src="/images/img_symbol.png" alt="ak홀딩스 심볼마크">
                 </span>
-                <span class="symbol-size">
-                    <img src="/images/img_symbol_size_m.png" alt="ak홀딩스 심볼마크 최소크기" class="mo"><!-- 6/8 업데이트 모바일/PC 이미지 분기 -->
-                    <img src="/images/img_symbol_size.png" alt="ak홀딩스 심볼마크 최소크기" class="pc">
-                </span>
-                <p class="comment">※ 심벌마크를 단독으로 사용하는 것을 허용하지 않습니다.</p>
             </div>
-            <ul class="download-wrap" style="display:none;"><!-- 2차 오픈시 노출 -->
+            <p class="sub-tit">애경 코퍼레이트 심벌</p>
+            <p class="desc">
+                애경 CIS(Corporate Identification System)의<br class="mo">
+                가장 기본적인 요소로서 기업의 이미지를<br class="mo">
+                대내외적으로 표출하여 모든 시각커뮤니케이션의<br class="mo">
+                핵심이 되는 상징물이다.
+            </p>
+            <p class="desc">코퍼레이트 심벌의 기본정신은 21세기 국제화,<br class="mo">
+                일류화를 향한 화합과 도전의 역동적인 자세로<br class="mo">
+                고객의 사랑과 신뢰를 바탕으로 한 행복을<br class="mo">
+                창조하는 기업 문화 창출이며, 전체적으로<br class="mo">
+                풍요로움과 미소의 이미지를 표현하였다.</p>
+            <p class="desc">
+                영문 이니셜 ‘a’와 ‘k’는 세계속으로 무한히<br class="mo">
+                도약하는 애경을 형상화 하였으며, 하단 부분의<br class="mo">
+                곡선은 역동적으로 파도치는 맑고 큰 ‘물결’을<br class="mo">
+                상징하는 것으로 21세기 변화를 주도하는<br class="mo">
+                진취적이고 미래 지향적인 애경의 의지를<br class="mo">
+                표명한다.
+            </p>
+            <!--<ul class="download-wrap">
                 <li>
                     <a href="/images/AK홀딩스(주)CI.ai" class="btn-download">AI 파일 다운로드</a>
                 </li>
                 <li>
                     <a href="/notice/fileDown.do?fileName=aijpg&filePath=/" class="btn-download">JPG 파일 다운로드</a>
                 </li>
-            </ul>
+            </ul>-->
         </div>
     </div>
 </div>
