--- a/value_talent.html
+++ b/value_talent.html
@@ -183,28 +183,44 @@
 <!--//visual 영역-->
 <!--본문영역-->
 <div class="content">
-    <div class="cont">
-        <div class="value-talent">
-            <div class="visual-wrap">
-                <span>
-                    <img src="/images/img_love_respect.png" alt="사랑합니다 존경합니다">
-                </span>
-            </div>
-            <div class="desc-wrap">
-                <div class="quotes">
-                    <img src="/images/ico_quotes_blue.png" alt="큰따옴표 이미지" class="mo">
-                    <img src="/images/ico_quotes_black.png" alt="큰따옴표 이미지" class="pc">
+    <div class="value-talent">
+        <p class="cont_tit">애경은 사랑과 존경을 바탕으로<br>
+            함께 꿈꾸고 도전하며<br class="mo">
+            성장하는 리더를 지향합니다.</p>
+        <div class="talent-cont">
+            <div class="inner">
+                <div class="img-wrap">
+                    <img src="./images/img_talent_mo.png" alt="" class="mo">
+                    <img src="./images/img_talent_pc.png" alt="" class="pc">
+                    <!--<img src="./images/img_talent_pc.png" alt="">-->
                 </div>
-                <em class="tit">
-                    애경은 사람을 사랑하고<br> 존경하는 마음을 가진 사람들이<br class="mo"> 함께합니다.
-                </em>
-                <p>애경인은 사랑하고 존경하는 마음으로<br class="mo">
-                    고객과 사회에 한 걸음 더 다가가서<br>
-                    그들이 필요로 하는 가치를 찾기 위해 노력하고,<br class="mo">
-                    투명한 정도와 신뢰,<br class="pc"> 그리고 끊임없는 도전과<br class="mo">
-                    혁신을 통해 그것을 제공함으로써<br>
-                    사람의 삶을 더욱 아름답고<br class="mo">
-                    풍요롭게 만들기 위해 끊임없이 노력합니다.</p>
+                <ul class="talent-list">
+                    <li class="respect">
+                        <p class="tit">존중</p>
+                        <p class="sub-tit">구성원을 존중하는 마음으로<br>
+                            소통하고 협업합니다.</p>
+                        <p class="desc">다양성의 존중과 협업이 성과를 만드는 데<br class="mo">
+                            큰 힘을 발휘한다는 것을 믿으며,<br class="mo">
+                            문제를 발굴하고 개선하려는 구성원들의<br class="mo">
+                            용기 있는 시도를 존중합니다.</p>
+                    </li>
+                    <li class="sacrifice">
+                        <p class="tit">헌신</p>
+                        <p class="sub-tit">솔선수범을 통해<br>
+                            구성원의 자발적 헌신을 이끌어냅니다.</p>
+                        <p class="desc">어려움을 피하지 않고 정당한 절차와 방법으로<br class="mo">
+                            문제를 해결하여 결과를 만들어 내며 그것에<br class="mo">
+                            대한 책임을 가집니다.</p>
+                    </li>
+                    <li class="professional">
+                        <p class="tit">전문성</p>
+                        <p class="sub-tit">새로운 트랜드를 지속적으로 학습하고<br>
+                            구성원과 함께 성장합니다.</p>
+                        <p class="desc">새로운 트렌드를 학습하고 성장함으로써<br class="mo">
+                            구성원들에게 성장에 대한 자극과 영감을 주며,<br class="mo">
+                            경험과 지식을 나누면서 함께 성장해 갑니다.</p>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
