--- a/list.html
+++ b/list.html
@@ -137,6 +137,12 @@
     </tr>
     <tr>
         <td>6</td>
+        <td>IR > 지배구조 > 이사회현황</td>
+        <td><a href="/ir_bod.html">ir_bod.html</a></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>6</td>
         <td>IR > 재무상태표 2021</td>
         <td><a href="/financial_income2021.html">financial_income2021.html</a></td>
         <td>5/29업데이트
