--- a/list.html
+++ b/list.html
@@ -273,7 +273,7 @@
     </tr>
     <tr>
         <td>12</td>
-        <td>IR > IR 정보 > Contact IR</td>
+        <td>IR > IR 정보 > IR Contact </td>
         <td><a href="/ir_contact.html">ir_contact.html</a></td>
         <td><p style="color:#ff00ff;">6/2업데이트</p>
             <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p><p style="color:#FF0000">6/6업데이트 오타 및 메뉴 수정</p></td>
