--- a/value_founded.html
+++ b/value_founded.html
@@ -27,13 +27,13 @@
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M5JGW9K"
                   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
-<header class="top">
+<header class="main top">
     <div class="head">
         <h1><a href="/"><img src="/images/logo_w.png" alt="AK 홀딩스 로고"><img src="/images/logo_b.png" alt="AK 홀딩스 로고"></a></h1>
         <div class="quick-menu">
             <ul>
-                <li class="active"><a href="/introduce_ceo.html">그룹 소개</a></li>
-                <li><a href="/esg_management_goal.html">애경 ESG</a></li>
+                <li><a href="/introduce_ceo.html">애경 소개</a></li>
+                <li><a href="/esg_management_goal.html">ESG</a></li>
                 <li><a href="/fo/akNews.do">뉴스룸</a></li>
                 <li><a href="/ir_governance.html">IR</a></li>
             </ul>
@@ -43,35 +43,21 @@
     <nav>
         <ul>
             <li>
-                <h3><a href="#">그룹 소개</a></h3>
+                <h3><a href="#">애경 소개</a></h3>
                 <ul>
                     <li>
                         <ul>
                             <!-- 메뉴 활성화시 아래 li에 .active 추가 -->
                             <li><a href="/value_founded.html">애경 가치</a></li>
-                            <li class="active"><a href="/value_founded.html">창업이념</a></li>
+                            <li><a href="/value_founded.html">핵심가치</a></li>
                             <li><a href="/value_management">경영이념</a></li>
                             <li><a href="/value_talent">인재상</a></li>
-                            <li class="tow-nd"><a href="#">가치체계도</a></li>
-                            <li class="tow-nd"><a href="#">미션과 비전</a></li>
                         </ul>
-                        <em></em>
-                        <ul>
-                            <li><a href="/introduce_ci.html">Corporate Identity</a></li>
-                            <li><a href="/introduce_ci.html">의미</a></li>
-                            <li class="tow-nd"><a href="#">로고 규정</a></li>
-                        </ul>
-                        <em></em>
                         <ul>
                             <li><a href="/introduce_ceo.html">회사 소개</a></li>
-                            <li><a href="/introduce_ceo.html">CEO Message</a></li>
-                            <li class="tow-nd"><a href="#">홀딩스 역할</a></li>
-                            <li class="tow-nd"><a href="#">거버넌스 구조</a></li>
+                            <li><a href="/introduce_ceo.html">CEO 메시지</a></li>
+                            <li><a href="/introduce_ci.html">CI</a></li>
                         </ul>
-                        <ul class="tow-nd">
-                            <li><a href="#">계열사 소개</a></li>
-                        </ul>
-                        <em></em>
                         <ul>
                             <li><a href="/introduce_history.html">연혁</a></li>
                         </ul>
@@ -79,27 +65,17 @@
                 </ul>
             </li>
             <li>
-                <h3><a href="#">애경 ESG</a></h3>
+                <h3><a href="#">ESG</a></h3>
                 <ul>
                     <li>
                         <ul>
                             <li><a href="/esg_management_goal.html">ESG 경영</a></li>
-                            <li><a href="/esg_management_goal.html">ESG 경영 목표</a></li>
                             <li><a href="/esg_management_level.html">ESG 등급</a></li>
-                            <li class="tow-nd"><a href="#">다양성과 포용성</a></li>
-                            <li class="tow-nd"><a href="#">ESG 추진체계(조직)</a></li>
-                            <li class="tow-nd"><a href="#">지속가능경영 보고서</a></li>
                         </ul>
-                        <em></em>
                         <ul>
                             <li><a href="/fo/esgNews.do">ESG 소식</a></li>
-                        </ul>
-                        <ul class="tow-nd">
-                            <li><a href="#">윤리경영</a></li>
-                            <li><a href="#">윤리제보관리시스템</a></li>
-                        </ul>
-                        <ul class="tow-nd">
-                            <li><a href="#">애경복지재단</a></li>
+                            <li><a href="/fo/esgNews.do">ESG 소식</a></li>
+                            <li><a href="/esg_main_activity.html">주요 ESG 활동</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -111,17 +87,6 @@
                         <ul>
                             <li><a href="/fo/akNews.do">애경뉴스</a></li>
                         </ul>
-                        <ul class="tow-nd">
-                            <li><a href="#">웹진</a></li>
-                            <li><a href="#">ON AEKYUNG</a></li>
-                        </ul>
-                        <ul class="tow-nd">
-                            <li><a href="#">소셜미디어</a></li>
-                            <li><a href="#">Facebook</a></li>
-                            <li><a href="#">Instagram</a></li>
-                            <li><a href="#">Youtube</a></li>
-                            <li><a href="#">Naver</a></li>
-                        </ul>
                     </li>
                 </ul>
             </li>
@@ -132,27 +97,24 @@
                         <ul>
                             <li><a href="/ir_governance.html">지배구조</a></li>
                             <li><a href="/ir_governance.html">기업지배구조</a></li>
-                            <li class="tow-nd"><a href="#">기업지배구조헌장</a></li>
+                            <li><a href="/ir_bod.html">이사회 현황</a></li>
                         </ul>
-                        <em></em>
                         <ul>
                             <li><a href="/financial_income2021.html">재무정보</a></li>
                             <li><a href="/financial_income2021.html">재무상태표</a></li>
                             <li><a href="/financial_statement2021.html">손익계산서</a></li>
                             <li><a href="/financial_cash2021.html">현금흐름표</a></li>
                         </ul>
-                        <em></em>
                         <ul>
                             <li><a href="/investment_info.html">공시정보</a></li>
                             <li><a href="/investment_info.html">공시자료</a></li>
                             <li><a href="/investment_info_list.html">공고</a></li>
                         </ul>
-                        <em></em>
                         <ul>
-                            <li><a href="/ir_contact.html">IR 정보</a></li>
-                            <li><a href="/ir_contact.html">Contact IR</a></li>
+                            <li><a href="/ir_contact.html">IR</a></li>
+                            <li><a href="/ir_contact.html">IR Contact</a></li>
                             <li><a href="/fo/ir_business.do ">사업보고서</a></li>
-                            <li class="tow-nd"><a href="#">감사보고서</a></li>
+                            <li><a href="/ir_inspect.html ">감사보고서</a></li> <!-- fo/ir_inspect.do???? -->
                         </ul>
                     </li>
                 </ul>
