--- a/esg_news_detail.html
+++ b/esg_news_detail.html
@@ -128,7 +128,16 @@
         <h2 class="tit"><span class="tk-arboria">ESG</span> 소식</h2>
         <p class="desc">지속 가능한 경영을 위한<br class="mo"> 애경그룹의 노력을 소개합니다</p>
     </div>
-    <div class="visual esg-news"></div><!-- 6/7업데이트 - 비주얼이미지 인라인 제거 및 class 추가-->
+    <div class="visual esg-news has-tab"><!-- 6/7업데이트 - 비주얼이미지 인라인 제거 및 class 추가--><!-- 6/2업데이트 - .has-tab 추가 -->
+        <div class="top-tab">
+            <ul>
+                <!-- active: 활성화시 li에 .active 추가 -->
+                <li class="mo"><a href="javascript:;">ESG 소식</a></li>
+                <li class="active"><a href="/esg_news.html">ESG 소식</a></li>
+                <li><a href="/esg_main_activity.html">주요 ESG 활동</a></li>
+            </ul>
+        </div>
+    </div>
 </div>
 <!--//visual 영역-->
 <!--본문영역-->
