--- a/list.html
+++ b/list.html
@@ -127,6 +127,13 @@
         </td>
     </tr>
     <tr>
+        <td>5</td>
+        <td>뉴스룸 > 주요 ESG활동</td>
+        <td><a href="/esg_main_activity.html">esg_main_activity.html</a></td>
+        <td>
+        </td>
+    </tr>
+    <tr>
         <td>6</td>
         <td>IR > 지배구조</td>
         <td><a href="/ir_governance.html">ir_governance.html</a></td>
