--- a/ir_inspect.html
+++ b/ir_inspect.html
@@ -125,7 +125,7 @@
 <!--visual 영역-->
 <div class="topArea sub">
     <div class="titArea">
-        <h2 class="tit"><span class="tk-arboria">IR</span> 정보</h2>
+        <h2 class="tit"><span class="tk-arboria">IR</span></h2>
         <p class="desc">투자정보 제공을 통해<br class="mo"> 주주와의 소통에 힘쓰겠습니다</p><!-- 6/6업데이트 오타수정 -->
     </div>
     <div class="visual ir has-tab"><!-- 6/7업데이트 - 비주얼이미지 인라인 제거 및 class 추가--><!-- 6/2업데이트 - .has-tab 추가 -->
