--- a/ir_contact.html
+++ b/ir_contact.html
@@ -145,24 +145,16 @@
 <div class="content">
     <div class="cont">
         <div class="contact-ir">
-            <div class="inner">
-                <div class="quotes">
-                    <img src="/images/ico_quotes_black.png" alt="큰따옴표 이미지">
+            <p class="desc">AK홀딩스 IR과 관련된 문의는<br>
+                아래 전화문의를 통해<br class="mo">
+                성실히 답변해 드리겠습니다.</p>
+            <div class="mail-address">
+                <div class="inner">
+                    <p class="tit">AK홀딩스 IR 문의</p>
+                    <a href="mailto:akh_ir@aekyung.kr" class="address">akh_ir@aekyung.kr</a>
+                    <p class="desc">보내주신 메일에는<br class="mo"> 최대한 빠른 답변 드리도록 하겠습니다.</p>
                 </div>
-                <p class="desc">AK홀딩스 IR과 관련된 문의는<br>
-                    아래 전화문의를 통해<br class="mo">
-                    성실히 답변해 드리겠습니다.</p>
             </div>
-            <ul class="ir-phone">
-                <li>
-                    <em class="tit">AK홀딩스㈜ 대표번호</em>
-                    <span class="number"><a href="tel:027682923">02&middot;768&middot;2923</a></span>
-                </li>
-                <li>
-                    <em class="tit">AK홀딩스㈜ IR 담당</em>
-                    <span class="number"><a href="tel:027682914">02&middot;768&middot;2914</a></span>
-                </li>
-            </ul>
         </div>
     </div>
 </div>
