--- a/ir_contact.html
+++ b/ir_contact.html
@@ -42,7 +42,7 @@
     </div>
     <nav>
         <ul>
-            <li>
+            <li id="nav_1">
                 <h3><a href="#">애경 소개</a></h3>
                 <ul>
                     <li>
@@ -50,8 +50,8 @@
                             <!-- 메뉴 활성화시 아래 li에 .active 추가 -->
                             <li><a href="/value_founded.html">애경 가치</a></li>
                             <li><a href="/value_founded.html">핵심가치</a></li>
-                            <li><a href="/value_management">경영이념</a></li>
-                            <li><a href="/value_talent">인재상</a></li>
+                            <li><a href="/value_management.html">경영이념</a></li>
+                            <li><a href="/value_talent.html">인재상</a></li>
                         </ul>
                         <ul>
                             <li><a href="/introduce_ceo.html">회사 소개</a></li>
@@ -64,7 +64,7 @@
                     </li>
                 </ul>
             </li>
-            <li>
+            <li id="nav_2">
                 <h3><a href="#">ESG</a></h3>
                 <ul>
                     <li>
@@ -80,7 +80,7 @@
                     </li>
                 </ul>
             </li>
-            <li>
+            <li id="nav_3">
                 <h3><a href="#">뉴스룸</a></h3>
                 <ul>
                     <li>
@@ -90,7 +90,7 @@
                     </li>
                 </ul>
             </li>
-            <li>
+            <li  id="nav_4">
                 <h3><a href="#">IR</a></h3>
                 <ul>
                     <li>
@@ -108,13 +108,13 @@
                         <ul>
                             <li><a href="/investment_info.html">공시정보</a></li>
                             <li><a href="/investment_info.html">공시자료</a></li>
-                            <li><a href="/investment_info_list.html">공고</a></li>
+                            <li><a href="/fo/investment_info_list.do">공고</a></li>
                         </ul>
                         <ul>
                             <li><a href="/ir_contact.html">IR</a></li>
                             <li><a href="/ir_contact.html">IR Contact</a></li>
                             <li><a href="/fo/ir_business.do ">사업보고서</a></li>
-                            <li><a href="/ir_inspect.html ">감사보고서</a></li> <!-- fo/ir_inspect.do???? -->
+                            <li><a href="/fo/ir_inspect.do">감사보고서</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -135,7 +135,7 @@
                 <li class="mo"><a href="javascript:;">IR Contact </a></li>
                 <li class="active"><a href="javascript:;">IR Contact </a></li>
                 <li><a href="/fo/ir_business.do ">사업보고서</a></li>
-                <li><a href="/ir_inspect.html">감사보고서</a></li>
+                <li><a href="/fo/ir_inspect.do">감사보고서</a></li>
             </ul>
         </div>
     </div>
