--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
     <nav>
         <ul>
-            <li>
+            <li id="nav_1">
                 <h3><a href="#">애경 소개</a></h3>
                 <ul>
                     <li>
@@ -51,8 +51,8 @@
                             <!-- 메뉴 활성화시 아래 li에 .active 추가 -->
                             <li><a href="/value_founded.html">애경 가치</a></li>
                             <li><a href="/value_founded.html">핵심가치</a></li>
-                            <li><a href="/value_management">경영이념</a></li>
-                            <li><a href="/value_talent">인재상</a></li>
+                            <li><a href="/value_management.html">경영이념</a></li>
+                            <li><a href="/value_talent.html">인재상</a></li>
                         </ul>
                         <ul>
                             <li><a href="/introduce_ceo.html">회사 소개</a></li>
@@ -65,7 +65,7 @@
                     </li>
                 </ul>
             </li>
-            <li>
+            <li id="nav_2">
                 <h3><a href="#">ESG</a></h3>
                 <ul>
                     <li>
@@ -81,7 +81,7 @@
                     </li>
                 </ul>
             </li>
-            <li>
+            <li id="nav_3">
                 <h3><a href="#">뉴스룸</a></h3>
                 <ul>
                     <li>
@@ -91,7 +91,7 @@
                     </li>
                 </ul>
             </li>
-            <li>
+            <li  id="nav_4">
                 <h3><a href="#">IR</a></h3>
                 <ul>
                     <li>
@@ -109,13 +109,13 @@
                         <ul>
                             <li><a href="/investment_info.html">공시정보</a></li>
                             <li><a href="/investment_info.html">공시자료</a></li>
-                            <li><a href="/investment_info_list.html">공고</a></li>
+                            <li><a href="/fo/investment_info_list.do">공고</a></li>
                         </ul>
                         <ul>
                             <li><a href="/ir_contact.html">IR</a></li>
                             <li><a href="/ir_contact.html">IR Contact</a></li>
                             <li><a href="/fo/ir_business.do ">사업보고서</a></li>
-                            <li><a href="/ir_inspect.html ">감사보고서</a></li> <!-- fo/ir_inspect.do???? -->
+                            <li><a href="/fo/ir_inspect.do">감사보고서</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -147,8 +147,8 @@
                     </p>
                 </div>
             </div>
-            <div class="btn-scroll-down"><a href="javascript:;" onclick="myFullpage.moveTo('newsRoom', 1)" class="tk-arboria" onClick="scrollDown()"><img src="./images/scrollMotion.gif" alt="클릭시 다음페이지로 이동">SCROLL</a></div>
-
+            <div class="btn-scroll-down pc"><a href="javascript:;" onclick="$.fn.fullpage.moveTo('newsRoom', 1)" class="tk-arboria" onClick="scrollDown()"><img src="./images/scrollMotion.gif" alt="클릭시 다음페이지로 이동">SCROLL</a></div>
+            <div class="btn-scroll-down mo"><a href="javascript:;" onclick="scrollDown()" class="tk-arboria" onClick="scrollDown()"><img src="./images/scrollMotion.gif" alt="클릭시 다음페이지로 이동">SCROLL</a></div>
         </section>
         <section class="section fp-auto-height-responsive news-room" data-anchor="newsRoom" id="section1">
             <div class="news-top">
@@ -164,61 +164,6 @@
                                     <img src="./images/temp_thumb.png" alt="">
                                     <p class="tit">제주항공</p>
                                     <p class="con">환경부와 지속가능의 환경교육 '맞손'</p>
-                                    <p class="date">2022.06.08</p>
-                                </a>
-                            </h3>
-                        </div>
-                        <div class="swiper-slide">
-                            <h3>
-                                <a href="#">
-                                    <img src="./images/temp_thumb.png" alt="">
-                                    <p class="tit">제주항공</p>
-                                    <p class="con">AK&홍대, 글로벌 캐릭터 활용한 ‘시나모롤<br>
-                                        스위트카페’ 국내 최초 오픈</p>
-                                    <p class="date">2022.06.08</p>
-                                </a>
-                            </h3>
-                        </div>
-                        <div class="swiper-slide">
-                            <h3>
-                                <a href="#">
-                                    <img src="./images/temp_thumb.png" alt="">
-                                    <p class="tit">제주항공</p>
-                                    <p class="con">AK&홍대, 글로벌 캐릭터 활용한 ‘시나모롤<br>
-                                        스위트카페’ 국내 최초 오픈</p>
-                                    <p class="date">2022.06.08</p>
-                                </a>
-                            </h3>
-                        </div>
-                        <div class="swiper-slide">
-                            <h3>
-                                <a href="#">
-                                    <img src="./images/temp_thumb.png" alt="">
-                                    <p class="tit">제주항공</p>
-                                    <p class="con">AK&홍대, 글로벌 캐릭터 활용한 ‘시나모롤<br>
-                                        스위트카페’ 국내 최초 오픈</p>
-                                    <p class="date">2022.06.08</p>
-                                </a>
-                            </h3>
-                        </div>
-                        <div class="swiper-slide">
-                            <h3>
-                                <a href="#">
-                                    <img src="./images/temp_thumb.png" alt="">
-                                    <p class="tit">제주항공</p>
-                                    <p class="con">AK&홍대, 글로벌 캐릭터 활용한 ‘시나모롤<br>
-                                        스위트카페’ 국내 최초 오픈</p>
-                                    <p class="date">2022.06.08</p>
-                                </a>
-                            </h3>
-                        </div>
-                        <div class="swiper-slide">
-                            <h3>
-                                <a href="#">
-                                    <img src="./images/temp_thumb.png" alt="">
-                                    <p class="tit">제주항공</p>
-                                    <p class="con">AK&홍대, 글로벌 캐릭터 활용한 ‘시나모롤<br>
-                                        스위트카페’ 국내 최초 오픈</p>
                                     <p class="date">2022.06.08</p>
                                 </a>
                             </h3>
@@ -387,14 +332,60 @@
 <script src="/js/fullpage.min.js"></script>
 <script src="/js/common.js"></script>
 <script>
-    let myFullpage = null;
     //init
+    let _WIDTH = 0;
+    let _HEIGHT = 0;
+    let myFullpage = false;
     $(function () {
         setTimeout(function () {
             AKCOMMON.topEffect = true;
         }, 10);
-
-        myFullpage = new fullpage('#fullpage', {
+        const swiper = new Swiper('.swiper', {
+            slidesPerView: 'auto',
+            spaceBetween: 20,
+            // Navigation arrows
+            navigation: {
+                nextEl: '.swiper-button-next',
+                prevEl: '.swiper-button-prev',
+            },
+            breakpoints: {
+                960: {
+                    spaceBetween: 36,
+                },
+            },
+            on: {
+                slideChange: function () {
+                    console.log(swiper.activeIndex);
+                    console.log(swiper.activeIndex , 10);
+                    console.log(swiper.activeIndex * 100 / 10);
+                    $('#swiperBar').css('width', swiper.activeIndex * 100 / ($('.swiper-slide').length - Math.floor(window.innerWidth / 376)) + '%');
+                }
+            }
+        });
+    });
+    $(window).on('resize', function () {
+        _WIDTH = $(window).width();
+        _HEIGHT = $(window).height();
+        if (_WIDTH > 960) {
+            if (!myFullpage) fullpageFn()
+        } else {
+            if (myFullpage) {
+                myFullpage = false
+                $.fn.fullpage.destroy('all');
+            }
+        }
+    });
+    //scrollDown
+    const scrollDown = function() {
+        $('html, body').animate({
+            scrollTop: $('.news-room').offset().top + 'px'
+        }, 300);
+    }
+    //fullpage
+    const fullpageFn = function() {
+        if (myFullpage) return false
+        myFullpage = true
+        new fullpage('#fullpage', {
             licenseKey: 'FC634C81-CDA24EDD-9C3418A5-8FA08AC3',
             verticalCentered: true,
             anchors: ['topVisual', 'newsRoom', 'esg', 'footer'],
@@ -411,48 +402,6 @@
                 else $('header').removeClass('main-top');
             }
         });
-        // const spaceBetween = window.innerWidth > 960 ? 36 : 20
-        const swiper = new Swiper('.swiper', {
-            slidesPerView: 'auto',
-            spaceBetween: 20,
-            // width: 376,
-            // pagination: {
-            //     el: ".swiper-pagination",
-            //     clickable: true,
-            // },
-
-            // Navigation arrows
-            navigation: {
-                nextEl: '.swiper-button-next',
-                prevEl: '.swiper-button-prev',
-            },
-            breakpoints: {
-                960: {
-                    spaceBetween: 36,
-                },
-            },
-            on: {
-                slideChange: function () {
-                    console.log(swiper.activeIndex , $('.swiper-slide').length);
-                    console.log(swiper.activeIndex * 100 / $('.swiper-slide').length);
-                    $('#swiperBar').css('width', swiper.activeIndex * 100 / ($('.swiper-slide').length - Math.floor(window.innerWidth / 376)) + '%');
-                }
-            }
-
-            // And if we need scrollbar
-            // scrollbar: {
-            //     el: '.swiper-scrollbar',
-            // },
-        });
-
-
-    });
-    //scrollDown
-    function scrollDown() {
-        console.log($('.news-room').offset().top)
-        $('html, body').animate({
-            scrollTop: $('.news-room').offset().top + 'px'
-        }, 300);
     }
 </script>
 </body>
