--- a/index.html
+++ b/index.html
@@ -336,11 +336,12 @@
     let _WIDTH = 0;
     let _HEIGHT = 0;
     let myFullpage = false;
+    let swiper = null;
     $(function () {
         setTimeout(function () {
             AKCOMMON.topEffect = true;
         }, 10);
-        const swiper = new Swiper('.swiper', {
+        swiper = new Swiper('.swiper', {
             slidesPerView: 'auto',
             spaceBetween: 20,
             // Navigation arrows
@@ -355,10 +356,8 @@
             },
             on: {
                 slideChange: function () {
-                    console.log(swiper.activeIndex);
-                    console.log(swiper.activeIndex , 10);
-                    console.log(swiper.activeIndex * 100 / 10);
-                    $('#swiperBar').css('width', swiper.activeIndex * 100 / ($('.swiper-slide').length - Math.floor(window.innerWidth / 376)) + '%');
+                    if (_WIDTH > 960) $('#swiperBar').css('width', swiper.activeIndex * 100 / (10 - Math.floor(window.innerWidth / 376)) + '%');
+                    else $('#swiperBar').css('width', (swiper.activeIndex * 100 / (_WIDTH > 960 ? 10 : 9)) + '%');
                 }
             }
         });
@@ -369,10 +368,12 @@
         _HEIGHT = $(window).height();
         if (_WIDTH > 960) {
             if (!myFullpage) fullpageFn()
+            if (swiper) $('#swiperBar').css('width', swiper.activeIndex * 100 / (10 - Math.floor(window.innerWidth / 376)) + '%');
         } else {
             if (myFullpage) {
                 myFullpage = false
                 $.fn.fullpage.destroy('all');
+                if (swiper) $('#swiperBar').css('width', (swiper.activeIndex * 100 / 9) + '%');
             }
         }
     });
@@ -398,7 +399,6 @@
                     direction: direction,
                     trigger: trigger
                 };
-                console.log(params.destination.anchor);
                 if (params.destination && params.destination.anchor == 'topVisual') $('header').addClass('main-top');
                 else $('header').removeClass('main-top');
             }
